<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:picker="http://schemas.android.com/apk/res/com.quietlycoding.android.picker">

	<PreferenceCategory android:title="@string/pref_cat_physical_parameters_title"

		android:summary="@string/pref_cat_physical_parameters_summary">


		<CheckBoxPreference android:key="@string/pref_is_gravity_enabled_key"
			android:title="@string/pref_is_gravity_enabled_title"
			android:summary="@string/pref_is_gravity_enabled_summary" 
			android:defaultValue="true"/>

		<CheckBoxPreference android:key="@string/pref_is_pinned_key"
			android:title="@string/pref_is_pinned_title" android:summary="@string/pref_is_pinned_summary" 
			android:defaultValue="false"/>

		<EditTextPreference android:title="@string/pref_pudding_radius_title"
			android:dialogTitle="@string/pref_pudding_radius_title"
			android:summary="@string/pref_pudding_radius_summary" android:key="@string/pref_pudding_radius_key"
			android:defaultValue="@string/pref_pudding_radius_default">
		</EditTextPreference>

		<EditTextPreference android:title="@string/pref_number_of_nodes_title"
			android:dialogTitle="@string/pref_number_of_nodes_title"
			android:summary="@string/pref_number_of_nodes_summary" android:key="@string/pref_number_of_nodes_key"
			android:defaultValue="@string/pref_number_of_nodes_default">
		</EditTextPreference>
		
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_cat_appearance_title"
		android:summary="@string/pref_cat_appearance_summary">

		<ListPreference android:key="@string/pref_render_mode_key"
			android:title="@string/pref_render_mode_title" android:entries="@array/pref_render_mode_text"
			android:entryValues="@array/pref_render_mode_value"
			android:persistent="true" />

		<net.margaritov.preference.colorpicker.ColorPickerPreference 
			android:summary="@string/pref_pudding_color_summary" android:key="@string/pref_pudding_color_key" android:title="@string/pref_pudding_color_title"
			android:defaultValue="@color/color_pudding_default"/> 
		
		<net.margaritov.preference.colorpicker.ColorPickerPreference 
			android:key="@string/pref_background_color_key" android:title="@string/pref_background_color_title" android:summary="@string/pref_background_color_summary"
				android:defaultValue="@color/color_background_default"/> 
	</PreferenceCategory>

</PreferenceScreen>
